--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -1,4 +1,5 @@
 # from galaxy
 - src: Azure.azure_preview_modules
+- src: rdtechie.az_naming_convention
 - src: rdtechie.az_create_resource_group
 - src: rdtechie.az_delete_resource_group
