--- a/create-resource-group.yml
+++ b/create-resource-group.yml
@@ -8,5 +8,6 @@
     - ./vars/vars.yml
   roles:
     - { role: Azure.azure_preview_modules }
+    - { role: rdtechie.naming_convention }
     - { role: rdtechie.az_create_resource_group  }
 ...
