--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -1,5 +1,8 @@
 # from galaxy
 - src: Azure.azure_preview_modules
-- src: rdtechie.az_naming_convention
-- src: rdtechie.az_create_resource_group
-- src: rdtechie.az_delete_resource_group
+- src: https://github.com/rdtechie/ansible_role_az_naming_convention
+  name: az_naming_convention
+- src: https://github.com/rdtechie/ansible_role_az_create_resource_group
+  name: az_create_resource_group
+- src: https://github.com/rdtechie/ansible_role_az_delete_resource_group
+  name: az_delete_resource_group
