--- a/create-resource-group.yml
+++ b/create-resource-group.yml
@@ -8,10 +8,10 @@
     - name: Retrieve Vault File from Git
       git:
         repo: 'https://github.com/rdtechie/ansible_az_vaults.git'
-        dest: ./
+        dest: /tmp/
     
   vars_files:
-    - ./playground.yml
+    - /tmp/ansible_az_vaults/playground.yml
     - ./vars/vars.yml
   roles:
     - { role: Azure.azure_preview_modules }
