--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,1 +1,1 @@
-#vault_password_file = https://raw.githubusercontent.com/rdtechie/ansible_az_vaults/master/playground.yml
+vault_password_file = https://raw.githubusercontent.com/rdtechie/ansible_az_vaults/master/playground.yml
